file changes and update

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HELPZ - Free Charity Website Template</title>
+    <title>HELPZ - NGO Charity</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free Website Template" name="keywords" />
-    <meta content="Free Website Template" name="description" />
+    <meta
+      name="description"
+      content="Join us in making a positive impact on the world. Your charity platform for supporting various causes. Donate, volunteer, and help those in need."
+    />
+    <meta
+      name="keywords"
+      content="charity, nonprofit, donate, volunteer, support, NGO, humanitarian, philanthropy"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -46,7 +52,7 @@
               </div>
               <div class="text">
                 <i class="fa fa-envelope"></i>
-                <p>info@example.com</p>
+                <p>charityngoexample.com</p>
               </div>
             </div>
           </div>
@@ -140,7 +146,7 @@
           </div>
           <div class="carousel-item">
             <div class="carousel-img">
-              <img src="img/war__children.jpg" alt="Image" />
+              <img src="img/gaza_victims_20231021.jpeg" alt="Image" />
             </div>
             <div class="carousel-text">
               <h1>Get Involved with helping hand</h1>
@@ -162,7 +168,7 @@
           </div>
           <div class="carousel-item">
             <div class="carousel-img">
-              <img src="img/war__child.jpg" alt="Image" />
+              <img src="img/war__children.jpg" alt="Image" />
             </div>
             <div class="carousel-text">
               <h1>Bringing smiles to millions</h1>
