--- a/team.html
+++ b/team.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>HELPZ - Free Charity Website Template</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta charset="utf-8" />
+        <title>HELPZ - NGO Charity</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+        <title>Supporting Our Cause | Your Charity Platform</title>
+        <meta
+          name="description"
+          content="Join us in making a positive impact on the world. Your charity platform for supporting various causes. Donate, volunteer, and help those in need."
+        />
+        <meta
+          name="keywords"
+          content="charity, nonprofit, donate, volunteer, support, NGO, humanitarian, philanthropy"
+        />
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
