--- a/event.html
+++ b/event.html
@@ -35,7 +35,7 @@
 
   <body>
     <!-- Top Bar Start -->
-    <div class="top-bar d-none d-md-block">
+    <!-- <div class="top-bar d-none d-md-block">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-8">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Top Bar End -->
 
     <!-- Nav Bar Start -->
@@ -113,7 +113,7 @@
     <!-- Nav Bar End -->
 
     <!-- Page Header Start -->
-    <div class="page-header">
+    <div class="page-header bg-img">
       <div class="container">
         <div class="row">
           <div class="col-12">
