change blog page link to News

--- a/event.html
+++ b/event.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HELPZ - NGO charity platform</title>
+    <title>HELPZ - NGO charity platform | /News</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free Website Template" name="keywords" />
     <meta content="Free Website Template" name="description" />
@@ -87,7 +87,7 @@
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="causes.html" class="nav-item nav-link">Causes</a>
             <a href="event.html" class="nav-item nav-link active">Events</a>
-            <a href="blog.html" class="nav-item nav-link">Blog</a>
+            <a href="blog.html" class="nav-item nav-link">News</a>
             <div class="nav-item dropdown">
               <a
                 href="#"
