--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                         <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="causes.html" class="nav-item nav-link">Causes</a>
                         <a href="event.html" class="nav-item nav-link">Events</a>
-                        <a href="blog.html" class="nav-item nav-link">Blog</a>
+                        <a href="blog.html" class="nav-item nav-link">News</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu">
@@ -90,7 +90,7 @@
         
         
         <!-- Page Header Start -->
-        <div class="page-header">
+        <div class="page-header bg-img">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
