--- a/volunteer.html
+++ b/volunteer.html
@@ -94,7 +94,7 @@
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="causes.html" class="nav-item nav-link">Causes</a>
             <a href="event.html" class="nav-item nav-link">Events</a>
-            <a href="blog.html" class="nav-item nav-link">Blog</a>
+            <a href="blog.html" class="nav-item nav-link">News</a>
             <div class="nav-item dropdown">
               <a
                 href="#"
