add news post about gaza

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="causes.html" class="nav-item nav-link">Causes</a>
             <a href="event.html" class="nav-item nav-link">Events</a>
-            <a href="blog.html" class="nav-item nav-link">Blog</a>
+            <a href="blog.html" class="nav-item nav-link">News</a>
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -270,34 +270,13 @@
 
               <div class="tab-content">
                 <div id="tab-content-1" class="container tab-pane active">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
-                  vitae pellentesque turpis. Donec in hendrerit dui, vel blandit
-                  massa. Ut vestibulum suscipit cursus. Cras quis porta nulla,
-                  ut placerat risus. Aliquam nec magna eget velit luctus dictum.
-                  Phasellus et felis sed purus tristique dignissim. Morbi sit
-                  amet leo at purus accumsan pellentesque. Vivamus fermentum
-                  nisi vel dapibus blandit. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit.
+                  At Helpz, our platform serves as a hub for compassionate individuals and organizations looking to make a difference in the world. We connect donors, volunteers, and changemakers with those in dire need. Our mission is to provide vital support and assistance to individuals, communities, and countries facing serious challenges. Together, we can create a more equitable and compassionate world.
                 </div>
                 <div id="tab-content-2" class="container tab-pane fade">
-                  Sed tincidunt, magna ut vehicula volutpat, turpis diam
-                  condimentum justo, posuere congue turpis massa in mi. Proin
-                  ornare at massa at fermentum. Nunc aliquet sed nisi iaculis
-                  ornare. Nam semper tortor eget est egestas, eu sagittis nunc
-                  sodales. Interdum et malesuada fames ac ante ipsum primis in
-                  faucibus. Praesent bibendum sapien sed purus molestie
-                  malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit.
+                  Our mission is to extend a helping hand to those in desperate situations. We are dedicated to providing essential support, including food, clean water, medical aid, education, and resources, to individuals and communities in need. Through collective action, we aim to make a lasting impact, empowering people and nations to overcome adversity and build a brighter future. Join us in our journey to transform lives and create a more compassionate world.
                 </div>
                 <div id="tab-content-3" class="container tab-pane fade">
-                  Aliquam dolor odio, mollis sed feugiat sit amet, feugiat ut
-                  sapien. Nunc eu dignissim lorem. Suspendisse at hendrerit
-                  enim. Interdum et malesuada fames ac ante ipsum primis in
-                  faucibus. Sed condimentum semper turpis vel facilisis. Nunc
-                  vel faucibus orci. Mauris ut mauris rhoncus, efficitur nisi
-                  at, venenatis quam. Praesent egestas pretium enim sit amet
-                  finibus. Curabitur at erat molestie, tincidunt lorem eget,
-                  consequat ligula.
+                  Our vision is a world where no one is left behind, where every person, regardless of their circumstances, has access to the support and resources they need to thrive. We envision a global community bound by empathy and solidarity, working together to alleviate suffering, promote well-being, and foster positive change.
                 </div>
               </div>
             </div>
@@ -857,7 +836,7 @@
     <!-- Volunteer End -->
 
     <!-- Testimonial Start -->
-    <div class="testimonial">
+    <!-- <div class="testimonial">
       <div class="container">
         <div class="section-header text-center">
           <p>Testimonial</p>
@@ -930,7 +909,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
     <!-- Contact Start -->
@@ -1005,7 +984,7 @@
     <!-- Contact End -->
 
     <!-- Blog Start -->
-    <div class="blog">
+    <!-- <div class="blog">
       <div class="container">
         <div class="section-header text-center">
           <p>Our Blog</p>
@@ -1068,7 +1047,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Blog End -->
 
     <!-- Footer Start -->
