add image CDN link

--- a/causes.html
+++ b/causes.html
@@ -26,7 +26,10 @@
       rel="stylesheet"
     />
     <link href="lib/flaticon/font/flaticon.css" rel="stylesheet" />
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Template Stylesheet -->
@@ -86,7 +89,6 @@
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="causes.html" class="nav-item nav-link active">Causes</a>
-            <a href="event.html" class="nav-item nav-link">Events</a>
             <a href="blog.html" class="nav-item nav-link">News</a>
             <div class="nav-item dropdown">
               <a
@@ -113,7 +115,7 @@
     <!-- Nav Bar End -->
 
     <!-- Page Header Start -->
-    <div class="page-header">
+    <div class="page-header bg-img">
       <div class="container">
         <div class="row">
           <div class="col-12">
