--- a/volunteer.html
+++ b/volunteer.html
@@ -33,7 +33,10 @@
       rel="stylesheet"
     />
     <link href="lib/flaticon/font/flaticon.css" rel="stylesheet" />
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Template Stylesheet -->
@@ -93,7 +96,6 @@
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="causes.html" class="nav-item nav-link">Causes</a>
-            <a href="event.html" class="nav-item nav-link">Events</a>
             <a href="blog.html" class="nav-item nav-link">News</a>
             <div class="nav-item dropdown">
               <a
